# PHOENIX

./: .clang-format  .gitignore  Dockerfile  Jetson_Nano_Module_Pinmux_Config_Template.xlsm  README.md  RealsenseTestDocker  build.sh  launch.sh  practice_MYNAME.txt  practice_YOURNAME  tegra210-jetson_nano_module-gpio-default.dtsi  tegra210-jetson_nano_module-pinmux.dtsi
.devcontainer/: Dockerfile  devcontainer.json  docker-compose.yml  entrypoint.sh
.github/actions/cppformat/: Dockerfile  action.yml  entrypoint.sh
.github/workflows/: CPPFormatDockerfile  check-format.yml  ci.yml  cpp_format_entrypoint.sh  formatter.yml  test.yml
ArduinoScripts/: AutoDigHallEffect  LinearActuator.ino
ArduinoScripts/AutoHome/: AutoHome.ino
ArduinoScripts/HallEffect/: HallEffect.ino
ArduinoScripts/PIDTwoActuators/: PIDTwoActuators.ino
ArduinoScripts/PIDTwoActuators/PIDTwoActuators/: PIDTwoActuators.ino
ArduinoScripts/Potentiometer/: Potentiometer.ino
ArduinoScripts/UartActuator/: UartActuator.ino
ArduinoScripts/travelToPosition/: travelToPosition.ino
Arduino_PWM/pwm_custom/: pwm_custom.ino
UART/: ComputerToArduinoUARTSimple
log/: latest_list
src/main_ws/install/: local_setup.sh  setup.sh
src/main_ws/install/controls/include/: settings.h  utils.h
src/main_ws/log/: latest_build
src/main_ws/src/controls/: CMakeLists.txt  package.xml
src/main_ws/src/controls/include/: settings.h  utils.h
src/main_ws/src/controls/launch/: launch.py  launch.yaml  twocontrollerlaunch.yaml
src/main_ws/src/controls/src/: dig.cpp  drivetrain.cpp  dump.cpp  settings.h  uart.cpp  uart.hpp
src/main_ws/src/controls_msgs/: CMakeLists.txt
src/main_ws/src/controls_msgs/msg/: Conversion.msg  Dig.msg  Drivetrain.msg  Dump.msg  Uart.msg
src/main_ws/src/drive_station/: CMakeLists.txt  package.xml
src/main_ws/src/drive_station/launch/: launch.yaml
src/main_ws/src/drive_station/src/: CameraWidget.hpp  ConsoleWidget.hpp  DataWidget.hpp  MainWindow.hpp  converter.cpp  gui.cpp
src/main_ws/src/micro_control/: CMakeLists.txt
src/main_ws/src/perception/: CMakeLists.txt
src/main_ws/src/perception/src/: camera.cpp  obdet.py  test.py
src/main_ws/src/teleop/: CMakeLists.txt  package.xml
src/main_ws/src/teleop/launch/: launch.py  launch.yaml
src/main_ws/src/teleop/src/: dig.cpp  distrib.cpp  dump.cpp
src/micro_ws/install/: local_setup.sh  setup.sh
src/micro_ws/log/: latest_build
src/micro_ws/micro_ros_raspberrypi_pico_sdk/: CMakeLists.txt  README.md  available_ros2_types  built_packages  dig.c  package.xml  pico_uart_transport.c
src/micro_ws/micro_ros_raspberrypi_pico_sdk/.devcontainer/: Dockerfile  devcontainer.json
src/micro_ws/micro_ros_raspberrypi_pico_sdk/microros_static_library/library_generation/: library_generation.sh
src/micro_ws/src/install/: local_setup.sh  setup.sh
src/micro_ws/src/log/: latest_build
src/micro_ws/src/micro_controls/: CMakeLists.txt  package.xml
(+236 files in other folders)
